<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="lang">en</string>

    <string name="app_name">Traffic</string>
    <string name="tab_map">Map</string>
    <string name="tab_list">List</string>
    <string name="tab_cameras">Cameras</string>
    <string name="settings">Settings</string>

    <string name="freeways">Freeways</string>
    <string name="fast_roads">Freeways</string>
    <string name="border_crossings">Border Crossings</string>
    <string name="regional_roads">Regional Roads</string>
    <string name="local_roads">Local Roads</string>
    <string name="roadworks">Roadworks</string>
    <string name="misc">Misc</string>
    <string name="preferences_language">Language</string>
    <string name="preferences_language_dialog">Choose language</string>
    <string name="preferences_title">Settings</string>
    <string name="list_hint">%1$s\u0020Freeways  %2$s\u0020Border\u0020cross.  %3$s\u0020Reg.\u0020roads\n%4$s\u0020Local\u0020roads</string>
    <string name="preferences_notifications">Notifications</string>
    <string name="preferences_notifications_enabled">Notify when a new event occurs</string>
    <string name="preferences_notifications_categories">Notify about new events on </string>
    <string name="preferences_notifications_crossings">Border crossings</string>
    <string name="preferences_notifications_highways">Freeways</string>
    <string name="preferences_notifications_regional">Regional roads</string>
    <string name="preferences_notifications_local">Local roads</string>
    <string name="notification_channel_name">Traffic notifications</string>
    <string name="notification_channel_description">Notifications about new traffic events.</string>
    <string name="alert_notifications_title">Notifications</string>
    <string name="alert_notifications_content">Do you want to be notified about new events on the road?</string>
    <string name="alert_notifications_yes">Yes, notify me</string>
    <string name="altert_notifications_no">No</string>
    <string name="load_error">Data could not be loaded.</string>
    <string name="map_traffic_detail">Avg. speed %1$d km/h, gap %2$.1f s</string>
    <string name="loading">Loading…</string>
    <string name="preferences_about">About</string>
    <string name="preferences_privacy_policy">Privacy policy</string>

    <string-array name="road_type_strings">
        <item>@string/freeways</item>
        <item>@string/fast_roads</item>
        <item>@string/border_crossings</item>
        <item>@string/regional_roads</item>
        <item>@string/local_roads</item>
        <item>@string/roadworks</item>
        <item>@string/misc</item>
    </string-array>

    <string-array name="languages">
        <item>Device language</item>
        <item>Slovenian</item>
        <item>English</item>
    </string-array>

    <string-array name="languages_values">
        <item>default</item>
        <item>sl</item>
        <item>en</item>
    </string-array>

    <plurals name="notifications_multiple_title">
        <item quantity="one">One new event</item>
        <item quantity="other">%d new events</item>
    </plurals>

    <plurals name="notifications_multiple_ticker">
        <item quantity="one">One new traffic event</item>
        <item quantity="other">%d new traffic events</item>
    </plurals>

    <plurals name="notifications_multiple_summary">
        <item quantity="one">… and one more.</item>
        <item quantity="other">… and %d more.</item>
    </plurals>

    <string-array name="traffic_status_strings">
        <item>No data</item>
        <item>Normal traffic</item>
        <item>Increased traffic</item>
        <item>Denser traffic</item>
        <item>Dense traffic</item>
        <item>Dense traffic with jams</item>
    </string-array>

</resources>
