<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/preferences_title">

        <ListPreference
            android:key="app_language"
            android:title="@string/preferences_language"
            android:dialogTitle="@string/preferences_language_dialog"
            android:entries="@array/languages"
            android:entryValues="@array/languages_values"
            android:defaultValue="default"
            />

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_notifications">

        <SwitchPreference
            android:id="@+id/preferences_notifications"
            android:key="gcm_enabled"
            android:title="@string/preferences_notifications_enabled"
            android:defaultValue="false"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preferences_notifications_categories">

        <SwitchPreference
            android:id="@+id/preferences_notifications_crossings"
            android:key="gcm_crossings"
            android:title="@string/preferences_notifications_crossings"
            android:defaultValue="true"
            />

        <SwitchPreference
            android:id="@+id/preferences_notifications_highways"
            android:key="gcm_highways"
            android:title="@string/preferences_notifications_highways"
            android:defaultValue="true"
            />

        <SwitchPreference
            android:id="@+id/preferences_notifications_regional"
            android:key="gcm_regional"
            android:title="@string/preferences_notifications_regional"
            android:defaultValue="true"
            />

        <SwitchPreference
            android:id="@+id/preferences_notifications_local"
            android:key="gcm_local"
            android:title="@string/preferences_notifications_local"
            android:defaultValue="true"
            />

    </PreferenceCategory>
</PreferenceScreen>