<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_map_avtoceste"
        android:title="@string/freeways"
        android:checkable="true"
        android:showAsAction="never"
        />

    <item
        android:id="@+id/menu_map_crossings"
        android:title="@string/border_crossings"
        android:checkable="true"
        android:showAsAction="never"

        />

    <item
        android:id="@+id/menu_map_regionalne_ceste"
        android:title="@string/regional_roads"
        android:titleCondensed="Reg. ceste"
        android:checkable="true"
        android:showAsAction="never"

        />

    <item
        android:id="@+id/menu_map_lokalne_ceste"
        android:title="@string/local_roads"
        android:titleCondensed="Lok. ceste"
        android:checkable="true"
        android:showAsAction="never"

        />
</menu>